--- a/WebApp2/src/main/resources/application.properties
+++ b/WebApp2/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+app:
+dataSource:
+postgres:
+port: 5432
+username: postgres
+password: password
+host: localhost
+databaseName:
+jdbc-url: jdbc:postgresql://${app.dataSource.postgres.host}:${app.dataSource.postgres.port}/${app.dataSource.postgres.databaseName}
